# winui_mcp_server

./: .gitignore  LICENSE  README.cn.md  README.md  cli_gateway.py  config.py  driver.py  mcp_server.py  pyproject.toml  requirements.txt  skills_library.py
.github/workflows/: publish.yml
