[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winui-mcp-server"
version = "0.1.0"
description = "MCP server for Windows UI Automation — control any Windows app from AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "uiautomation",
]

[project.scripts]
winui-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server", "driver", "skills_library", "cli_gateway", "config"]
