[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winui-mcp-server"
version = "0.1.0"
description = "MCP server for Windows UI Automation — control any Windows app from AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "uiautomation",
]

[project.scripts]
winui-mcp = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
